--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="ACNetworkDeviceW.h" />
     <ClInclude Include="ACNetworkW.h" />
     <ClInclude Include="ACRenderDeviceW.h" />
+    <ClInclude Include="MathConverter.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="ACRendererW.h" />
@@ -107,6 +108,7 @@
     <ClCompile Include="ACNetworkW.cpp" />
     <ClCompile Include="ACRenderDeviceW.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="MathConverter.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -121,6 +123,9 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EngineMathCLI\EngineMathCLI.csproj">
+      <Project>{6de26760-8118-430c-aa94-afb29714810f}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Engine\Engine.vcxproj">
       <Project>{d32bc7d9-98f2-4097-9241-230c832e3331}</Project>
     </ProjectReference>
