--- a/src/Engine/Demo/Demo.vcxproj
+++ b/src/Engine/Demo/Demo.vcxproj
@@ -20,12 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -128,7 +130,6 @@ copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\Build\</
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Background.cpp" />
     <ClCompile Include="BasicTest.cpp" />
     <ClCompile Include="DynamicTest.cpp" />
     <ClCompile Include="Floor.cpp" />
@@ -144,7 +145,6 @@ copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\Build\</
     <ClCompile Include="VerifySelection.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Background.h" />
     <ClInclude Include="BasicTest.h" />
     <ClInclude Include="DynamicTest.h" />
     <ClInclude Include="Floor.h" />
