--- a/src/Engine/Engine/Engine.vcxproj
+++ b/src/Engine/Engine/Engine.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="ACAFTLoader.h" />
     <ClInclude Include="ACAMTLoader.h" />
     <ClInclude Include="ACAMTStructs.h" />
+    <ClInclude Include="ACAnimationController.h" />
     <ClInclude Include="ACAudio.h" />
     <ClInclude Include="ACContentManager.h" />
     <ClInclude Include="ACMark.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="..\EngineCommon\ACConfigurations.cpp" />
     <ClCompile Include="ACAFTLoader.cpp" />
     <ClCompile Include="ACAMTLoader.cpp" />
+    <ClCompile Include="ACAnimationController.cpp" />
     <ClCompile Include="ACAudio.cpp" />
     <ClCompile Include="ACAudioDevice.h" />
     <ClCompile Include="ACContentManager.cpp" />
