Skin na gpu 100%

--- a/src/Engine/Demo/ConfigurationFile.ini
+++ b/src/Engine/Demo/ConfigurationFile.ini
@@ -2,3 +2,4 @@ ContentPath = C:\GitHub\ActionEngine\src\Engine\Demo\Contents
 EnableLOG = 1
 MaxVerticesInBuffer = 32768
 MaxIndicesInBuffer = 32768
+UseGPUSkinning = 1;
