--- a/src/Engine/Demo/Demo.vcxproj
+++ b/src/Engine/Demo/Demo.vcxproj
@@ -48,6 +48,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)\Build\</OutDir>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -72,7 +73,14 @@
       <LargeAddressAware>false</LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\</Command>
+      <Command>copy $(SolutionDir)$(Configuration)\ACD3DEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACDIEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACOpenALEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACWSEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\Build\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
