--- a/src/Engine/ACOpenALEngine/ACOpenALEngine.vcxproj
+++ b/src/Engine/ACOpenALEngine/ACOpenALEngine.vcxproj
@@ -75,6 +75,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;ACOPENALENGINE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\References\OpenAL 1.1 SDK\include;..\Engine;..\EngineCommon;..\EngineMath;..\References\oggvorbis-win32sdk-1.0\include</AdditionalIncludeDirectories>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
