--- a/src/Engine/Demo/ConfigurationFile.ini
+++ b/src/Engine/Demo/ConfigurationFile.ini
@@ -1,5 +1,5 @@
 ContentPath = C:\GitHub\ActionEngine\src\Engine\Demo\Contents
-EnableLOG = 1
+EnableLOG = 0
 MaxVerticesInBuffer = 32768
 MaxIndicesInBuffer = 32768
-UseGPUSkinning = 1;
+UseGPUSkinning = 1
