--- a/src/ActionEditor/ACFramework/ACFramework.csproj
+++ b/src/ActionEditor/ACFramework/ACFramework.csproj
@@ -43,13 +43,13 @@
     <Compile Include="ACGlobals.cs" />
     <Compile Include="ACGraphics.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="FileStruct\AMTFormat\AMT.cs" />
-    <Compile Include="FileStruct\AMTFormat\AMTExport.cs" />
-    <Compile Include="FileStruct\COLLADAFormat\COLLADAConverter.cs" />
-    <Compile Include="FileStruct\GlobalsImport.cs" />
-    <Compile Include="FileStruct\IConverter.cs" />
-    <Compile Include="Font\Character.cs" />
-    <Compile Include="Font\ConvertBMFont.cs" />
+    <Compile Include="Converters\FileStruct\AMTFormat\AMT.cs" />
+    <Compile Include="Converters\FileStruct\AMTFormat\AMTExport.cs" />
+    <Compile Include="Converters\FileStruct\COLLADAFormat\COLLADAConverter.cs" />
+    <Compile Include="Converters\FileStruct\GlobalsImport.cs" />
+    <Compile Include="Converters\FileStruct\IConverter.cs" />
+    <Compile Include="Converters\Font\Character.cs" />
+    <Compile Include="Converters\Font\ConvertBMFont.cs" />
     <Compile Include="Math\BoundingBox.cs" />
     <Compile Include="Math\BoundingSphere.cs" />
     <Compile Include="Math\FrameworkResources.cs" />
